--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "mint-ui": "^2.2.13",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "qs": "^6.5.1",
+    "style-loader": "^0.18.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.2",
     "vue-router": "^3.0.1",
@@ -55,7 +57,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "style-loader": "^0.18.2"
   },
   "engines": {
     "node": ">= 6.0.0",
